--- a/Lab_ASP/Views/Equipment/Details.cshtml
+++ b/Lab_ASP/Views/Equipment/Details.cshtml
@@ -15,6 +15,7 @@
         <h3>Informacje</h3>
         <p><strong>Rok produkcji: </strong>@Model.Year</p>
         <p><strong>Opis: </strong>@Model.Description</p>
+        <p><strong>Typ: </strong>@Model.Type</p>
         <a href="@Url.Action("Index", "Equipment")" class="btn btn-primary">Powrót</a>
     </div>
 </div>
