--- a/Lab_ASP/Views/Equipment/Index.cshtml
+++ b/Lab_ASP/Views/Equipment/Index.cshtml
@@ -14,7 +14,7 @@
             <div class="card">
                 <img src="@item.ImgURL" class="card-img-top" alt="@item.Model" />
                 <div class="card-body">
-                    <h5 class="card-title">@item.Make @item.Model</h5>
+                    <h5 class="card-title">@item.Make @item.Model (@item.Type)</h5>
                     <a href="@Url.Action("Details", "Equipment", new { id = item.ID })" class="btn btn-primary">Szczegóły</a>
                 </div>
             </div>
