wycofanie zmian zwiazanych z autoMapperem

--- a/Lab_ASP/Views/Equipment/Details.cshtml
+++ b/Lab_ASP/Views/Equipment/Details.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Lab_ASP.Models.ViewModels
-@model EquipmentDetailViewModel
+@model EquipmentViewModel
 
 @{
     ViewData["Title"] = "Szczegóły pojazdu";
