--- a/Lab_ASP/Views/Equipment/Index.cshtml
+++ b/Lab_ASP/Views/Equipment/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Lab_ASP.Models.ViewModels
-@model List<EquipmentItemViewModel>
+@model List<EquipmentViewModel>
 
 @{
     ViewData["Title"] = "Lista pojazdów";
