w pełni działający Mapper

--- a/Lab_ASP/Other/Equipment/Details.cshtml
+++ b/Lab_ASP/Other/Equipment/Details.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Lab_ASP.Models.ViewModels
-@model EquipmentViewModel
+@model EquipmentDetailViewModel
 
 @{
     ViewData["Title"] = "Szczegóły pojazdu";
@@ -15,7 +15,7 @@
         <h3>Informacje</h3>
         <p><strong>Rok produkcji: </strong>@Model.Year</p>
         <p><strong>Opis: </strong>@Model.Description</p>
-        <p><strong>Typ: </strong>@Model.Type</p>
+        <p><strong>Typ: </strong>@Model.EquipmentType</p>
         <a href="@Url.Action("Index", "Equipment")" class="btn btn-primary">Powrót</a>
     </div>
 </div>
