--- a/Lab_ASP/Other/Equipment/Index.cshtml
+++ b/Lab_ASP/Other/Equipment/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Lab_ASP.Models.ViewModels
-@model List<EquipmentViewModel>
+@model List<EquipmentDetailViewModel>
 
 @{
     ViewData["Title"] = "Lista pojazdów";
@@ -14,8 +14,8 @@
             <div class="card">
                 <img src="@item.ImgURL" class="card-img-top" alt="@item.Model" />
                 <div class="card-body">
-                    <h5 class="card-title">@item.Make @item.Model (@item.Type)</h5>
-                    <a href="@Url.Action("Details", "Equipment", new { id = item.ID })" class="btn btn-primary">Szczegóły</a>
+                    <h5 class="card-title">@item.Make @item.Model (@item.EquipmentType)</h5>
+                    <a href="@Url.Action("Details", "Equipment", new { id = item.Id })" class="btn btn-primary">Szczegóły</a>
                 </div>
             </div>
         </div>
