--- a/Lab_ASP/Views/Equipments/Create.cshtml
+++ b/Lab_ASP/Views/Equipments/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Lab_ASP.Models.Equipment
+﻿@model Lab_ASP.Models.ViewModels.EquipmentDetailViewModel
 
 @{
     ViewData["Title"] = "Create";
@@ -33,16 +33,16 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ImageURL" class="control-label"></label>
-                <input asp-for="ImageURL" class="form-control" />
-                <span asp-validation-for="ImageURL" class="text-danger"></span>
+                <label asp-for="ImgURL" class="control-label"></label>
+                <input asp-for="ImgURL" class="form-control" />
+                <span asp-validation-for="ImgURL" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="EquipmentTypeId" class="control-label">Equipment Type</label>
+                <label asp-for="EquipmentTypeId" class="control-label"></label>
                 <select asp-for="EquipmentTypeId" class ="form-control" asp-items="ViewBag.EquipmentTypeId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="RentalPointId" class="control-label">Rental Point</label>
+                <label asp-for="RentalPointId" class="control-label"></label>
                 <select asp-for="RentalPointId" class ="form-control" asp-items="ViewBag.RentalPointId"></select>
             </div>
             <div class="form-group">
