--- a/Lab_ASP/Views/Equipments/Edit.cshtml
+++ b/Lab_ASP/Views/Equipments/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Lab_ASP.Models.Equipment
+﻿@model Lab_ASP.Models.ViewModels.EquipmentDetailViewModel
 
 @{
     ViewData["Title"] = "Edit";
@@ -34,9 +34,9 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ImageURL" class="control-label"></label>
-                <input asp-for="ImageURL" class="form-control" />
-                <span asp-validation-for="ImageURL" class="text-danger"></span>
+                <label asp-for="ImgURL" class="control-label"></label>
+                <input asp-for="ImgURL" class="form-control" />
+                <span asp-validation-for="ImgURL" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="EquipmentTypeId" class="control-label"></label>
@@ -44,8 +44,9 @@
                 <span asp-validation-for="EquipmentTypeId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="RentalPointId" class="control-label">Rental Point</label>
+                <label asp-for="RentalPointId" class="control-label"></label>
                 <select asp-for="RentalPointId" class="form-control" asp-items="ViewBag.RentalPointId"></select>
+                <span asp-validation-for="RentalPointId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
