--- a/Lab_ASP/Views/EquipmentTypes/Details.cshtml
+++ b/Lab_ASP/Views/EquipmentTypes/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model Lab_ASP.Models.EquipmentType
+﻿@model Lab_ASP.Models.ViewModels.EquipmentTypeViewModel
 
 @{
     ViewData["Title"] = "Details";
