--- a/Lab_ASP/Views/RentalPoints/Delete.cshtml
+++ b/Lab_ASP/Views/RentalPoints/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model Lab_ASP.Models.RentalPoint
+﻿@model Lab_ASP.Models.ViewModels.RentalPointViewModel;
 
 @{
     ViewData["Title"] = "Delete";
