--- a/Lab_ASP/Views/EquipmentTypes/Index.cshtml
+++ b/Lab_ASP/Views/EquipmentTypes/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Lab_ASP.Models.EquipmentType>
+﻿@model IEnumerable<Lab_ASP.Models.ViewModels.EquipmentTypeViewModel>
 
 @{
     ViewData["Title"] = "Index";
