--- a/Lab_ASP/Views/RentalPoints/Index.cshtml
+++ b/Lab_ASP/Views/RentalPoints/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Lab_ASP.Models.RentalPoint>
+﻿@model IEnumerable<Lab_ASP.Models.ViewModels.RentalPointViewModel>
 
 @{
     ViewData["Title"] = "Index";
