--- a/Lab_ASP/Views/Shared/_Layout.cshtml
+++ b/Lab_ASP/Views/Shared/_Layout.cshtml
@@ -24,6 +24,15 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Strona Główna</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Equipments" asp-action="Index">Osprzęt</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="EquipmentTypes" asp-action="Index">Kategorie</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="RentalPoints" asp-action="Index">Punkty wypożyczeń</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Prywatność</a>
                         </li>
                     </ul>
