--- a/Lab_ASP/Areas/Admin/Views/Home/Index.cshtml
+++ b/Lab_ASP/Areas/Admin/Views/Home/Index.cshtml
@@ -2,8 +2,10 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
-    ViewData["Title"] = "Panel administratora";
     Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
+    ViewData["Title"] = "Panel główny";
 }
 
-<h2>Witaj w panelu administratora!</h2>
+<h1 class="h3 mb-4 text-gray-800">Panel administratora</h1>
+<p>Witaj w systemie zarządzania!</p>
+
